syntax = "proto3";

option go_package = "./ProtoMsg";

enum CMD_SERVICE {
  INIT_SERVICE = 0;
  G2S_DATA_TRANSFER = 20003;
  S2G_DATA_TRANSFER = 20004;
}

message G2S_DataTransfer {
  uint32 ConnId = 1;
  int32 MsgID = 2;
  bytes Data = 3;
  string DataJson = 4;
}

message S2G_DataTransfer {
  uint32 ConnId = 1;
  int32 MsgID = 2;
  bytes Data = 3;
  string DataJson = 4;
}

enum CMD_GAME {
  INIT_GAME = 0;
  PING = 1001;
  PONG = 1002;
}

message C2S_Ping {
  int32 Ping = 1;
}

message S2C_Pong {
  int32 Pong = 2;
}

enum CMD_DEV { 
  INIT_DEV = 0;
  C_DevPing = 100001;
  S_DevPing = 100002;
  C_DevInfo = 101001;
  S_DevInfo = 101002; 
  S_OnLine =  102001;
}

message C2S_DevPing {
  int32 Status  = 1;
  string Msg = 2;
}
message S2C_DevPing {
  int32 Status  = 1;
  string Msg = 2;
} 

message C2S_DevInfo {
  string Name = 1;
  string Group = 2;
  string AppKey = 3;
  string Ip = 4;
  string IpLocal = 5;
  int32 Port = 6;
  int32 ConnId = 7;
}
 
message S2C_DevInfo {
  int32 Status  = 1;
  string Msg = 2;
  repeated  C2S_DevInfo DevList = 3;
}

message S2C_OnLine {
  int32 Status  = 1;
  string Msg = 2;
  repeated  C2S_DevInfo DevList = 3;
}



 